--- a/_posts/1111-11-11-plan-100H.md
+++ b/_posts/1111-11-11-plan-100H.md
@@ -9,3 +9,25 @@ comments: true
 ---
 
 计划时间：<kbd>2020-07-20</kbd> —— <kbd>至今</kbd>
+
+|||
+|:---:|:---:|
+|开始时间|2020-07-20|
+|归档时间|-1|
+|正反馈|给自己买个降噪耳机叭|
+|已完成|0|
+
+
+---
+
+迄今为止，游戏时长10000h+，我真是爱游戏爱得深沉（哈哈哈哈）
+
+只是我有时候会想，如果学习时长10000h+，我现在又会是什么样呢？
+
+或许早已成为一个平平无奇的高手了吧
+
+毕竟我考研也才用了186个小时而已……
+
+所以，
+
+所以我想按照时间里程碑的方式push自己学习，就像是游戏中做任务，每完成一个任务都会有足够令人着迷沉醉的正反馈
