--- a/_posts/1111-11-11-plan-100H.md
+++ b/_posts/1111-11-11-plan-100H.md
@@ -8,19 +8,28 @@ tags:
 comments: true
 ---
 
-计划时间：<kbd>2020-07-20</kbd> —— <kbd>至今</kbd>
+## 总进度
 
-|||
+|A|B|
 |:---:|:---:|
 |开始时间|2020-07-20|
 |归档时间|-1|
 |正反馈|给自己买个降噪耳机叭|
 |已完成|0|
 
+---
+
+## 每日进展
+
+### 2020-07-20 0H
+* 无——0H
+
 
 ---
 
-迄今为止，游戏时长10000h+，我真是爱游戏爱得深沉（哈哈哈哈）
+## 为什么想这么做
+
+掐指一算，游戏时长10000h+，我真是爱游戏爱得深沉（哈哈哈哈）
 
 只是我有时候会想，如果学习时长10000h+，我现在又会是什么样呢？
 
