--- a/_posts/1000-01-01-plan-100H-R1.md
+++ b/_posts/1000-01-01-plan-100H-R1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 100H计划-Round1
-date: 1111-11-11
+date: 1000-01-01
 Author: Sinan Fan
 tags:
   - [100H]
@@ -16,11 +16,13 @@ comments: true
 
 或许早已成为一个平平无奇的高手了吧
 
-毕竟我考研也才用了186个小时而已……
+~~毕竟我考研也才用了186个小时而已……~~
 
 所以，
 
 所以我想按照时间里程碑的方式push自己学习，就像是游戏中做任务，每完成一个任务都会有足够令人着迷沉醉的正反馈
+
+当然，时间进度仅统计自身学习，不包含实验室任务和安排
 
 ---
 
